<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    tools:context="ucr.example.arce.activities.ProductInformation">

    <TextView
        android:id="@+id/NombreProducto2"
        android:layout_width="344dp"
        android:layout_height="71dp"

        android:layout_marginStart="24dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="13dp"
        android:text="@string/StringProducto"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/PrecioProducto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageViewProducto" />

    <TextView
        android:id="@+id/PrecioProducto2"
        android:layout_width="172dp"
        android:layout_height="38dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="18dp"
        android:text="@string/StringPrecio"
        android:textAlignment="center"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/CategoriaProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/NombreProducto2" />

    <TextView
        android:id="@+id/DescripcionProducto"
        android:layout_width="282dp"
        android:layout_height="85dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="49dp"
        android:text="@string/StringDescripcion"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonIncrementar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CategoriaProducto" />

    <TextView
        android:id="@+id/CategoriaProducto"
        android:layout_width="172dp"
        android:layout_height="30dp"
        android:layout_marginStart="110dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="20dp"
        android:text="@string/StringCategoria"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/DescripcionProducto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PrecioProducto2" />

    <Button
        android:id="@+id/buttonComprar"
        android:layout_width="122dp"
        android:layout_height="51dp"
        android:layout_marginStart="135dp"
        android:layout_marginEnd="136dp"
        android:layout_marginBottom="61dp"
        android:onClick="buyProduct"
        android:text="@string/StringComprar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/CantidadSeleccionada" />

    <Button
        android:id="@+id/buttonIncrementar"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginStart="87dp"
        android:layout_marginBottom="152dp"
        android:onClick="decrement"
        android:text="@string/StringDecrementar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/CantidadSeleccionada"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescripcionProducto" />

    <Button
        android:id="@+id/buttonDecrementar"
        android:layout_width="48dp"
        android:layout_height="52dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="152dp"
        android:onClick="increment"
        android:text="@string/StringAumentar"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/CantidadSeleccionada"
        app:layout_constraintTop_toBottomOf="@+id/DescripcionProducto" />

    <TextView
        android:id="@+id/CantidadSeleccionada"
        android:layout_width="54dp"
        android:layout_height="37dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="49dp"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="55dp"
        android:text="@string/StringCantidad"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonComprar"
        app:layout_constraintEnd_toStartOf="@+id/buttonDecrementar"
        app:layout_constraintStart_toEndOf="@+id/buttonIncrementar"
        app:layout_constraintTop_toBottomOf="@+id/DescripcionProducto" />

    <org.imaginativeworld.whynotimagecarousel.ImageCarousel
        android:id="@+id/imageViewProducto"
        android:layout_width="298dp"
        android:layout_height="149dp"
        android:layout_marginTop="48dp"
        android:layout_marginBottom="39dp"
        app:layout_constraintBottom_toTopOf="@+id/NombreProducto2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>