<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ucr.example.arce.activities.LogInActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginBottom="8dp"
        android:text="@string/login_title"
        android:textSize="28sp"
        app:layout_constraintBottom_toTopOf="@+id/til_usuario"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_usuario"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="30dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/til_contrasenia"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campo_usuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_enter_email"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_contrasenia"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="0dp"
        android:layout_height="54dp"
        android:layout_marginBottom="29dp"
        android:ems="10"
        app:layout_constraintBottom_toTopOf="@+id/boton_ingresar"
        app:layout_constraintEnd_toEndOf="@+id/til_usuario"
        app:layout_constraintStart_toStartOf="@+id/til_usuario"
        app:layout_constraintTop_toBottomOf="@+id/til_usuario"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/campo_contrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_enter_pass"
            android:inputType="textPassword"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/recuperar_contrasena"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginTop="8dp"
        android:clickable="true"
        android:minHeight="48dp"
        android:onClick="callForgotPassword"
        android:text="@string/forgot_pass_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/til_contrasenia" />

    <Button
        android:id="@+id/boton_ingresar"
        android:layout_width="0dp"
        android:layout_height="65dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="372dp"
        android:layout_weight="1"
        android:backgroundTint="@color/Primario"
        android:text="@string/login_btn"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/til_contrasenia"
        app:layout_constraintStart_toStartOf="@+id/til_contrasenia"
        app:layout_constraintTop_toBottomOf="@+id/til_contrasenia" />



    <ImageView
        android:id="@+id/FingerPrint"
        android:layout_width="103dp"
        android:layout_height="175dp"
        android:layout_marginTop="420dp"
        android:src="@drawable/ic_baseline_fingerprint_24"
        android:text="Login Finger Print"
        android:textSize="28sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/boton_ingresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>