<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="ucr.example.arce.fragments.CartFragment">
        <TextView
        android:id="@+id/location_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="San Jose"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/profile_pic"
        app:layout_constraintStart_toStartOf="@+id/name_text"
        app:layout_constraintTop_toBottomOf="@+id/name_text" />

        <Button
            android:id="@+id/confirm_order_btn"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/cart_confirm_btn"
            app:layout_constraintBottom_toBottomOf="@+id/cancel_order_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toEndOf="@+id/cancel_order_btn"
            app:layout_constraintTop_toTopOf="@+id/cancel_order_btn"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/cancel_order_btn"
            android:layout_width="0dp"
            android:layout_height="58dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="40dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:text="@string/cart_cancel_btn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/confirm_order_btn"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/total_price_text"
            app:layout_constraintVertical_bias="0.084" />

    <Button
        android:id="@+id/view_history_btn"
        android:layout_width="144dp"
        android:layout_height="70dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="4dp"
        android:text="@string/cart_history_btn"
        app:layout_constraintBottom_toBottomOf="@+id/location_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/name_text"
        app:layout_constraintTop_toTopOf="@+id/name_text" />

    <TextView
        android:id="@+id/name_text"
        android:layout_width="111dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="Juan Perez"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/profile_pic"
        app:layout_constraintTop_toTopOf="@+id/profile_pic" />

        <ImageView
            android:id="@+id/profile_pic"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/baseline_person_black_24" />

        <TextView
            android:id="@+id/total_price_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="56dp"
            android:text="@string/cart_total"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cart_items_RV" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/cart_items_RV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_pic">

    </androidx.recyclerview.widget.RecyclerView>
</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>